--- a/notebooks0.15/LightCurveGC.ipynb
+++ b/notebooks0.15/LightCurveGC.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Courbe de lumière de Sagittarius A*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "On veut utiliser la nouvelle classe AnalysisConfig"
    ]
   },
@@ -95,7 +102,7 @@
    ],
    "source": [
     "# Define which data to use and print some information\n",
-    "data_store = DataStore.from_dir(\"../data/ash_stereo_Prod17_Calib0834_thsq64\")\n",
+    "data_store = DataStore.from_dir(\"../../data/ash_stereo_Prod17_Calib0834_thsq64\")\n",
     "#data_store.obs_table.meta.update(dict(TIME_FORMAT= \"absolute\"))\n",
     "data_store.info()"
    ]
@@ -218,7 +225,7 @@
     "conf_3d = AnalysisConfig()\n",
     "\n",
     "# We define the datastore containing the data\n",
-    "conf_3d.observations.datastore = \"../data/ash_stereo_Prod17_Calib0834_thsq64\"\n",
+    "conf_3d.observations.datastore = \"$GAMMAPY_DATA/ash_stereo_Prod17_Calib0834_thsq64\"\n",
     "\n",
     "print(conf_3d)"
    ]
