--- a/notebooks0.15/evolutionGC_withDE.ipynb
+++ b/notebooks0.15/evolutionGC_withDE.ipynb
@@ -604,9 +604,10 @@
     "Pour les cartes fabriquées avec le FOVBackgroundMaker : \n",
     "- si la norm du background est frozen = emission diffuse est négative\n",
     "- si la norm du background est pas frozen = emission diffuse est négative au premier essai\n",
-    "-                                         = emission diffuse est idem au deuxième essai\n",
-    "-                                         = emission diffuse est idem   au troisième essai\n",
+    "- emission diffuse est idem au deuxième essai\n",
+    "- emission diffuse est idem   au troisième essai\n",
     "- si la norm du background est pas frozen ET qu'on ne refixe pas norm à 1 = emission diffuse est ok/bof au quatrième essai\n",
+    "- si on le refait (toujours sans toucher à la norm mais avec reset des 2 modèles) = c'est bon\n",
     "\n",
     "\n",
     "En gros, faire le fit une première fois pour avoir la norm juste, puis, sans toucher à la norm, remettre les deux modèles à zéro et refaire le fit, deux fois\n",
