--- a/notebooks0.15/evolutionGC_withDE.ipynb
+++ b/notebooks0.15/evolutionGC_withDE.ipynb
@@ -511,6 +511,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- on prend une carte de la distribution du CS comme base\n",
+    "- on applique une gaussienne pour \"atténuer\" les bords, car l'émission de rayons gamma suit la distribution du CS à part aux extrémités du \"disque centrale\"\n",
+    "- on choisit 0.8 deg comme écart-type de la gaussienne\n",
+    "- on seuil les valeurs de la cartes du CS, car celles-ci viennent de données bruitées qui peuvent prendre des valeurs négatives, on veut a priori seuiller un peu au dessus de zéro pour éliminer le bruit autour de zéro\n",
+    "- valeur du seuil : 10\n",
+    "- le fait d'utiliser TemplateSpatialModel en 0.15 conduit à normaliser les valeurs de la carte par leur somme (normal car on va fiter son amplitude), mais aussi par la somme des angles solides, ce qui fait que le spectre obtenu est en sr-1 emais ce n'est précisé nulle part"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -524,26 +536,26 @@
     }
    ],
    "source": [
-    "CSmap = Map.read(\"$GAMMAPY_DATA/CS_reproj.fits\") # à moduler par une gaussienne en longitude\n",
+    "CSmap = Map.read(\"$GAMMAPY_DATA/CS_reproj.fits\") \n",
     "\n",
+    "\n",
+    "# à moduler par une gaussienne en longitude\n",
     "coords = CSmap.geom.get_coord()\n",
     "lon = coords.skycoord.l.wrap_at(180*u.deg).to_value('deg')\n",
     "factor = np.exp(-0.5*(lon)**2/0.8**2)\n",
+    "\n",
     "\n",
     "# seuiller les valeurs pour enlever les valeurs négatives liées au bruit\n",
     "CSmap.data*=factor\n",
     "CSmap.data = CSmap.data.clip(10.0)\n",
     "\n",
-    "\n",
+    "# utile pour retrouver la bonne valeur du flux diffus (intégré sur l'angle solide)\n",
     "solid_angle_tot = CSmap.geom.solid_angle().sum()\n",
     "\n",
-    "\n",
-    "# Point subtil : le fait d'utiliser TemplateSpatialModel en 0.15 conduit à normaliser les valeurs de la carte par leur somme (normal car on va fiter son amplitude)\n",
-    "# mais aussi par la somme des angles solides, ce qui fait que le spectre obtenu est en sr-1 emais ce n'est précisé nulle part\n",
-    "\n",
+    "# utile ?\n",
     "#totalCS = CSmap.quantity*CSmap.geom.solid_angle()\n",
-    "\n",
     "#CSmap.data = CSmap.data/totalCS.value\n",
+    "\n",
     "\n",
     "diffuse_gal = TemplateSpatialModel(CSmap)\n",
     "\n",
@@ -732,7 +744,12 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -961,7 +978,10 @@
     "    amp_errdiff = results_per_year[year]['error'][7]\n",
     "    \n",
     "    if isinstance(emin, u.Quantity):\n",
-    "        diffuse_flux = diffuse_model.spectral_model.integral(emin, emax)*solid_angle_tot\n",
+    "        #il faut convertir le flux du diffus qui est en sr-1, \n",
+    "        # donc intégrer sur tout l'angle solide du template (opération inverse de celle effectuée par TamplateSpatialModel)\n",
+    "        \n",
+    "        diffuse_flux = diffuse_model.spectral_model.integral(emin, emax)*solid_angle_tot  \n",
     "        GC_flux = GC_model.spectral_model.integral(emin, emax)\n",
     "        \n",
     "    if np.isscalar(emin):\n",
@@ -985,6 +1005,18 @@
    "metadata": {},
    "source": [
     "### Tracé de l'évolution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problèmes actuels :\n",
+    "- l'émission diffuse varie trop (au moins du simple au double)\n",
+    "- l'émission diffuse n'est plus calculabe à partir de 2017\n",
+    "- l'émission diffuse croit \"linéairement\" en deux temps, pourquoi ?\n",
+    "- le flux de la source évolue clairement avec le flux du diffus, c'est attendu mais cela implique que les valeurs calculées pour le flux de la source sont faussés.\n",
+    "- le fond a une normalisation qui varie trop apparemment"
    ]
   },
   {
@@ -1297,6 +1329,13 @@
     "\n",
     "plt.title(\"Ajustement du rapport source/diffus, chi2r = \" + str(chi2r))\n",
     "plt.savefig(\"../../hess_results/12th_try/2004-2016/fit_flux_GCsurDE_04_16.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Autres choses"
    ]
   },
   {
