--- a/notebooks0.15/analyse3D/simu_evolution_3comp_diffuse.ipynb
+++ b/notebooks0.15/analyse3D/simu_evolution_3comp_diffuse.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "'0.15'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,12 +123,7 @@
     "for k in range (2004,2020):\n",
     "    name = \"map\" + str(k)\n",
     "    mapdataset_dict[k] = MapDataset.create(\n",
-    "    geom=geom, energy_axis_true=energy_axis_true, name=name)\n",
-    "\n",
-    "for year in range(2004,2020):\n",
-    "    \n",
-    "    filename = \"$GAMMAPY_DATA/mapdataset_hess/mapsdataset_bkg-peak/mapdataset\" +str(year)+\".fits.gz\"\n",
-    "    mapdataset_dict[year] = MapDataset.read(filename)"
+    "    geom=geom, energy_axis_true=energy_axis_true, name=name)"
    ]
   },
   {
@@ -140,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,26 +415,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Création des fausses cartes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/samuel/anaconda3/envs/gammapy-0.15/lib/python3.7/site-packages/astropy/units/quantity.py:464: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  result = super().__array_ufunc__(function, method, *arrays, **kwargs)\n",
       "/home/samuel/anaconda3/envs/gammapy-0.15/lib/python3.7/site-packages/gammapy/cube/psf_kernel.py:109: RuntimeWarning: invalid value encountered in true_divide\n",
       "  img += vals.value / vals.sum().value\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "for year in range(2004,2020):\n",
+    "    mapdataset_dict[year].models =  model.copy() + modelG09.copy()+ model_diffDGC.copy() +  model_diffLSC.copy() + model_diffCC.copy()\n",
+    "    mapdataset_dict[year].fake()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analyse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.6 s, sys: 0 ns, total: 12.6 s\n",
-      "Wall time: 12.7 s\n"
+      "CPU times: user 12.2 s, sys: 7.75 ms, total: 12.2 s\n",
+      "Wall time: 12.2 s\n"
      ]
     }
    ],
@@ -450,23 +469,14 @@
     "    mapdataset_dict[year].fit_mask = fit_mask\n",
     "    mapdataset_dict[year].models =  model.copy() + modelG09.copy()+ model_diffDGC.copy() +  model_diffLSC.copy() + model_diffCC.copy()\n",
     "    mapdataset_dict[year].background_model.parameters['norm'].value = 1.0\n",
-    "    #mapdataset_dict[year].background_model.parameters['norm'].frozen = True"
+    "    #mapdataset_dict[year].background_model.parameters['norm'].frozen = True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 11min 46s, sys: 1.82 s, total: 11min 48s\n",
-      "Wall time: 11min 48s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
@@ -932,48 +942,6 @@
     "- l'émission diffuse croit \"linéairement\" en deux temps, pourquoi ?\n",
     "- le flux de la source évolue clairement avec le flux du diffus, c'est attendu mais cela implique que les valeurs calculées pour le flux de la source sont faussés.\n",
     "- le fond a une normalisation qui varie trop apparemment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan])"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "amp_errsGC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan])"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "yerrGC"
    ]
   },
   {
