--- a/notebooks0.15/data_reduction.ipynb
+++ b/notebooks0.15/data_reduction.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 778,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 779,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -335,8 +335,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Création de la géométrie"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 780,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emin, emax = [0.5, 100] * u.TeV\n",
+    "\n",
+    "energy_axis = MapAxis.from_bounds(\n",
+    "    emin.value, emax.value, 20, unit=\"TeV\", name=\"energy\", interp=\"log\"\n",
+    ")\n",
+    "geom = WcsGeom.create(\n",
+    "    skydir=(0, 0),\n",
+    "    binsz=0.02,\n",
+    "    width=(10, 8),\n",
+    "    coordsys=\"GAL\",\n",
+    "    proj=\"CAR\",\n",
+    "    axes=[energy_axis],\n",
+    ")\n",
+    "\n",
+    "energy_axis_true = MapAxis.from_bounds(\n",
+    "    0.1, 200, 20, unit=\"TeV\", name=\"energy\", interp=\"log\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 799,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -379,8 +411,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 14min 52s, sys: 1.94 s, total: 14min 54s\n",
-      "Wall time: 14min 54s\n"
+      "CPU times: user 15min 38s, sys: 2.92 s, total: 15min 41s\n",
+      "Wall time: 15min 47s\n"
      ]
     }
    ],
@@ -428,20 +460,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 800,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "#path = Path(\"$GAMMAPY_DATA/mapdataset_hess/fifth_try\")\n",
+    "#path = Path(\"$GAMMAPY_DATA/mapdataset_hess/mapsdataset_bkg-peak\")\n",
     "#path.mkdir(exist_ok=True)\n",
     "\n",
     "for year in range(2004,2020):\n",
     "    \n",
-    "    filename = \"$GAMMAPY_DATA/mapdataset_hess/mapsdataset_120arcmin_bkg_renorm_alt/mapdataset\" +str(year)+\".fits.gz\"\n",
+    "    filename = \"$GAMMAPY_DATA/mapdataset_hess/mapsdataset_bkg-peak/mapdataset\" +str(year)+\".fits.gz\"\n",
     "    mapdataset_dict[year].write(filename, overwrite=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
