--- a/notebooks0.15/data_reduction.ipynb
+++ b/notebooks0.15/data_reduction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "'0.15'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -343,11 +343,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "emin, emax = [0.7, 100] * u.TeV\n",
+    "emin, emax = [0.5, 100] * u.TeV\n",
     "\n",
     "energy_axis = MapAxis.from_bounds(\n",
     "    emin.value, emax.value, 20, unit=\"TeV\", name=\"energy\", interp=\"log\"\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,15 +389,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: VerifyWarning: Invalid keyword for column 8: Column null option (TNULLn) is invalid for binary table columns of type '1E' (got -1).  The invalid value will be ignored for the purpose of formatting the data in this column. [astropy.io.fits.column]\n",
+      "WARNING: VerifyWarning: Invalid keyword for column 21: Column null option (TNULLn) is invalid for binary table columns of type '1E' (got -1).  The invalid value will be ignored for the purpose of formatting the data in this column. [astropy.io.fits.column]\n",
+      "WARNING: VerifyWarning: Invalid keyword for column 23: Column null option (TNULLn) is invalid for binary table columns of type '1E' (got -1).  The invalid value will be ignored for the purpose of formatting the data in this column. [astropy.io.fits.column]\n",
+      "WARNING: VerifyWarning: Invalid keyword for column 25: Column null option (TNULLn) is invalid for binary table columns of type '1E' (got -1).  The invalid value will be ignored for the purpose of formatting the data in this column. [astropy.io.fits.column]\n",
+      "WARNING: VerifyWarning: Invalid keyword for column 26: Column null option (TNULLn) is invalid for binary table columns of type '1D' (got -1).  The invalid value will be ignored for the purpose of formatting the data in this column. [astropy.io.fits.column]\n",
+      "WARNING: VerifyWarning: Invalid keyword for column 27: Column null option (TNULLn) is invalid for binary table columns of type '1E' (got -1).  The invalid value will be ignored for the purpose of formatting the data in this column. [astropy.io.fits.column]\n",
+      "WARNING: VerifyWarning: Invalid keyword for column 28: Column null option (TNULLn) is invalid for binary table columns of type '1E' (got -1).  The invalid value will be ignored for the purpose of formatting the data in this column. [astropy.io.fits.column]\n",
+      "WARNING: VerifyWarning: Invalid keyword for column 29: Column null option (TNULLn) is invalid for binary table columns of type '1E' (got -1).  The invalid value will be ignored for the purpose of formatting the data in this column. [astropy.io.fits.column]\n",
+      "WARNING: VerifyWarning: Invalid keyword for column 30: Column null option (TNULLn) is invalid for binary table columns of type '1E' (got -1).  The invalid value will be ignored for the purpose of formatting the data in this column. [astropy.io.fits.column]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15min, sys: 1.65 s, total: 15min 1s\n",
-      "Wall time: 15min 1s\n"
+      "CPU times: user 15min 56s, sys: 1.87 s, total: 15min 58s\n",
+      "Wall time: 15min 58s\n"
      ]
     }
    ],
@@ -412,7 +427,7 @@
     "    \n",
     "    offset_max = 2.0 * u.deg\n",
     "    maker = MapDatasetMaker()\n",
-    "    maker_safe_mask = SafeMaskMaker(methods=[\"offset-max\"], offset_max=offset_max)\n",
+    "    maker_safe_mask = SafeMaskMaker(methods=[\"offset-max\", \"bkg-peak\"], offset_max=offset_max)\n",
     "    maker_bkg = FoVBackgroundMaker(\"scale\", exclusion_mask)\n",
     "    \n",
     "    # au lieu de \"scale\" prendre \"fit\" en donnant au dataset un masque sur les bin en énergie (prendre à partir de 1 TeV par ex, même si c'est déjà haut 500 GeV)\n",
@@ -440,7 +455,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "safemask = mapdataset_dict[2004].mask_safe\n",
+    "expo = mapdataset_dict[2004].exposure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -451,34 +476,244 @@
        "        True,  True])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mapdataset_dict[2009].mask_safe.data[:,250,250]"
+    "reduce = safemask.reduce_over_axes(func=np.logical_or)\n",
+    "safemask.data[:, 250 ,250]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lors du stack on n'est pas surs de comment les différents seuils sont pris en compte.\n",
+    "Regardez les différentes énergies seuils, voir la distribution et enlever ceux qui sont trop haut. Ou bien juste partir beaucoup plus haut que le seuil donné par bkg-peak.\n",
+    "\n",
+    "Eventuellement participer à l'implémentation de"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pour information, la fonction associée à 'bkg-peak', rien à changer a priori, c'est simple et clair. ça fait ce que c'est censé faire, \n",
+    "# à la limite on peut penser à d'autres méthodes pour couper en énergie\n",
+    "\n",
+    "def make_mask_energy_bkg_peak(dataset):\n",
+    "        \"\"\"Make safe energy mask based on the binned background.\n",
+    "\n",
+    "        The energy threshold is defined as the upper edge of the energy\n",
+    "        bin with the highest predicted background rate. This method is motivated\n",
+    "        by its use in the HESS DL3 validation paper: https://arxiv.org/pdf/1910.08088.pdf\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        dataset : `~gammapy.modeling.Dataset`\n",
+    "            Dataset to compute mask for.\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        mask_safe : `~numpy.ndarray`\n",
+    "            Safe data range mask.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if isinstance(dataset, (MapDataset, MapDatasetOnOff)):\n",
+    "            background_spectrum = dataset.background_model.map.get_spectrum()\n",
+    "            counts = dataset.counts.geom\n",
+    "        else:\n",
+    "            background_spectrum = dataset.background\n",
+    "            counts = dataset.counts\n",
+    "\n",
+    "        idx = np.argmax(background_spectrum.data)         # trouve l'indice du max du spectre du bkg\n",
+    "        e_min = background_spectrum.energy.edges[idx + 1] # identifie l'emin comme l'énergie suivante du max\n",
+    "        return counts.energy_mask(emin=e_min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pour information, la méthode 'stack' de la classe MapDataset, on a un mapdataset (self) auquel on en rajoute un autre (other)\n",
+    "\n",
+    "def stack(self, other):\n",
+    "        \"\"\"Stack another dataset in place.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        other: `~gammapy.cube.MapDataset`\n",
+    "            Map dataset to be stacked with this one.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if self.counts and other.counts:\n",
+    "            self.counts *= self.mask_safe\n",
+    "            self.counts.stack(other.counts, weights=other.mask_safe)\n",
+    "\n",
+    "        if self.exposure and other.exposure:                                     # ICI\n",
+    "            mask_image = self.mask_safe.reduce_over_axes(func=np.logical_or)\n",
+    "            self.exposure *= mask_image.data\n",
+    "            \n",
+    "            # TODO: apply energy dependent mask to exposure. Does this require\n",
+    "            #  a mask_safe in true energy?\n",
+    "            \n",
+    "            mask_image_other = other.mask_safe.reduce_over_axes(func=np.logical_or)\n",
+    "            self.exposure.stack(other.exposure, weights=mask_image_other)\n",
+    "            \n",
+    "            # on applique reduce_over_axes aux deux safe_mask, donc on les réduit sur les axes non-spatiaux \n",
+    "            # (mais on prend le meilleur masque si les énergies sont masquées différemment)\n",
+    "            # donc on ne prend pas en compte le masquage éventuel en énergie lorsqu'on modifie l'exposure, \n",
+    "            # dans : self.exposure *= mask_image.data (elle est multipliée d'un bloc)\n",
+    "            \n",
+    "            # derrière il semble avoir un souci entre énergie vraie et énergie recombinée\n",
+    "\n",
+    "            \n",
+    "        if self.background_model and other.background_model:    \n",
+    "            bkg = self.background_model.evaluate()\n",
+    "            bkg *= self.mask_safe\n",
+    "            other_bkg = other.background_model.evaluate()\n",
+    "            bkg.stack(other_bkg, weights=other.mask_safe)\n",
+    "\n",
+    "            self.background_model = BackgroundModel(\n",
+    "                bkg, name=self.background_model.name\n",
+    "            )\n",
+    "\n",
+    "        if self.mask_safe is not None and other.mask_safe is not None:            # ICI en fait non ya rien à changer ici\n",
+    "            self.mask_safe.stack(other.mask_safe)\n",
+    "            \n",
+    "            # juste une fonction 'stack' celle de WcsNDMap\n",
+    "\n",
+    "        if self.psf and other.psf:\n",
+    "            if isinstance(self.psf, PSFMap) and isinstance(other.psf, PSFMap):\n",
+    "                mask_irf = self._mask_safe_irf(self.psf.psf_map, mask_image)\n",
+    "                self.psf.psf_map *= mask_irf.data\n",
+    "                self.psf.exposure_map *= mask_irf.data\n",
+    "\n",
+    "                mask_image_other = other.mask_safe.reduce_over_axes(func=np.logical_or)\n",
+    "                mask_irf_other = self._mask_safe_irf(\n",
+    "                    other.psf.psf_map, mask_image_other\n",
+    "                )\n",
+    "                self.psf.stack(other.psf, weights=mask_irf_other)\n",
+    "            else:\n",
+    "                raise ValueError(\"Stacking of PSF kernels not supported\")\n",
+    "\n",
+    "        if self.edisp and other.edisp:\n",
+    "            if isinstance(self.edisp, EDispMap) and isinstance(other.edisp, EDispMap):\n",
+    "                mask_irf = self._mask_safe_irf(self.edisp.edisp_map, mask_image)\n",
+    "                self.edisp.edisp_map *= mask_irf.data\n",
+    "                self.edisp.exposure_map *= mask_irf.data\n",
+    "\n",
+    "                mask_image_other = other.mask_safe.reduce_over_axes(func=np.logical_or)\n",
+    "                mask_irf_other = self._mask_safe_irf(\n",
+    "                    other.edisp.edisp_map, mask_image_other\n",
+    "                )\n",
+    "                self.edisp.stack(other.edisp, weights=mask_irf_other)\n",
+    "            else:\n",
+    "                raise ValueError(\"Stacking of edisp kernels not supported\")\n",
+    "\n",
+    "        if self.gti and other.gti:\n",
+    "            self.gti = self.gti.stack(other.gti).union()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pour info, méthode stack de la classe WcsNDMap\n",
+    "\n",
+    "def stack(self, other, weights=None):\n",
+    "        \"\"\"Stack cutout into map.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        other : `WcsNDMap`\n",
+    "            Other map to stack\n",
+    "        weights : `WcsNDMap`\n",
+    "            Array to be used as weights.\n",
+    "        \"\"\"\n",
+    "        if self.geom == other.geom:\n",
+    "            parent_slices, cutout_slices = None, None\n",
+    "        elif self.geom.is_aligned(other.geom):\n",
+    "            slices = other.geom.cutout_info[\"parent-slices\"]\n",
+    "            parent_slices = Ellipsis, slices[0], slices[1]\n",
+    "\n",
+    "            slices = other.geom.cutout_info[\"cutout-slices\"]\n",
+    "            cutout_slices = Ellipsis, slices[0], slices[1]\n",
+    "        else:\n",
+    "            raise ValueError(\n",
+    "                \"Can only stack equivalent maps or cutout of the same map.\"\n",
+    "            )\n",
+    "\n",
+    "        data = other.data[cutout_slices]\n",
+    "\n",
+    "        if weights is not None:\n",
+    "            data = data * weights.data\n",
+    "\n",
+    "        self.data[parent_slices] += data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapdataset_dict[2006].mask_safe.data[:,250,250]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  0.5          0.65166066   0.84932323   1.10694108   1.44269991\n",
-      "   1.88030155   2.45063709   3.19396757   4.16276604   5.42542173\n",
-      "   7.07106781   9.21587344  12.01124434  15.65451083  20.40285773\n",
-      "  26.59147948  34.65724216  45.16952262  58.87040187  76.7270499\n",
+      "[  0.7          0.89710471   1.14970981   1.47344298   1.88833234\n",
+      "   2.42004549   3.10147745   3.97478577   5.09399863   6.5283574\n",
+      "   8.36660027  10.72245218  13.74166054  17.61101204  22.56988842\n",
+      "  28.92507609  37.06974581  47.50777665  60.88492901  78.02879533\n",
       " 100.        ] TeV\n"
      ]
     }
    ],
    "source": [
     "print(energy_axis.edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pour masquer plus de bins que ce que fait le mask safe\n",
+    "\n",
+    "mask = dataset.mask_safe.copy()\n",
+    "mask.data[0:3,:,:]=False\n",
+    "dataset.mask_fit = mask"
    ]
   },
   {
