--- a/notebooks0.15/data_reduction-hap-hd.ipynb
+++ b/notebooks0.15/data_reduction-hap-hd.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "'0.15'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -205,18 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_store_hess1 = DataStore.from_dir(\"$GAMMAPY_DATA/hap-hd_Prod05/hess1/std_zeta_fullEnclosure\")\n",
-    "data_store_hess1u = DataStore.from_dir(\"$GAMMAPY_DATA/hap-hd_Prod05/hess1u/std_zeta_fullEnclosure\")\n",
-    "data_store_hess2 = DataStore.from_dir(\"$GAMMAPY_DATA/hap-hd_Prod05/hess2/std_zeta_fullEnclosure\")"
+    "data_store_hess1 = DataStore.from_dir(\"$GAMMAPY_DATA/hap-hd_Prod05/hess1/std_ImPACT_fullEnclosure\")\n",
+    "data_store_hess1u = DataStore.from_dir(\"$GAMMAPY_DATA/hap-hd_Prod05/hess1u/std_ImPACT_fullEnclosure\")\n",
+    "data_store_hess2 = DataStore.from_dir(\"$GAMMAPY_DATA/hap-hd_Prod05/hess2/std_ImPACT_fullEnclosure\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,12 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -368,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,9 +621,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'yearly_obs1u' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'yearly_obs1u' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -1031,19 +1048,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "path = Path(\"$GAMMAPY_DATA/mapdataset_hess/mapsdataset_hap-hd_zeta\")\n",
-    "path.mkdir(exist_ok=True)\n",
+    "#path = Path(\"../../../gamapy_data/mapdataset_hess/mapsdataset_hap-hd_zeta\")\n",
+    "#path.mkdir(exist_ok=True)\n",
     "\n",
     "for year in range(2004,2020):\n",
     "    \n",
-    "    filename = \"mapdataset\" +str(year)+\".fits.gz\"\n",
-    "    mapdataset_dict[year].write(path/filename, overwrite=True)"
+    "    filename = \"../../../gammapy_data/mapdataset_hess/mapsdataset_hap-hd_ImPACT/mapdataset\" +str(year)+\".fits.gz\"\n",
+    "    mapdataset_dict[year].write(filename, overwrite=True)"
    ]
   },
   {
